<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PetProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/titlepetprofile"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="147dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/dog_image_description"
        android:onClick="chooseImage"
        android:src="@drawable/noimage"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="53dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/petName"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="205dp"
            android:layout_height="51dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/font1"
            android:text="@string/camera"
            android:textColorHighlight="#E5E8B3"
            android:textColorLink="#E5E8B3"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button1"
            android:layout_width="286dp"
            android:layout_height="52dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/font1"
            android:text="@string/save"
            android:textColorHighlight="#E5E8B3"
            android:textColorLink="#E5E8B3"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/petAge"
            app:layout_constraintStart_toStartOf="@+id/petAge"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button3"
            android:layout_width="286dp"
            android:layout_height="52dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button1_style"
            android:fontFamily="@font/font1"
            android:text="@string/delete"
            android:textColorHighlight="#E5E8B3"
            android:textColorLink="#E5E8B3"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button"
            android:layout_width="286dp"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/font1"
            android:text="@string/back"
            android:textColorHighlight="#E5E8B3"
            android:textColorLink="#E5E8B3"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/button1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button1"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/petName"
            android:layout_width="298dp" android:textColor="@android:color/black" android:background="@drawable/edit_text_style" android:padding="16dp"
            android:layout_height="50dp"
            android:autofillHints="text"
            android:ems="10"
            android:hint="Pet Name"
            android:inputType="text" android:fontFamily="@font/font1"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/pettype"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/petType"
        app:layout_constraintEnd_toEndOf="@+id/petName"
        app:layout_constraintStart_toStartOf="@+id/petName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="92dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/petage"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/petAge"
        app:layout_constraintEnd_toEndOf="@+id/petType"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/petType" />

    <EditText
        android:id="@+id/petType"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="Pet Type"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/font1"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/petName"
        app:layout_constraintStart_toStartOf="@+id/petName"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/petAge"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:layout_marginBottom="36dp"
        android:autofillHints="text"
        android:hint="Pet Age"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/font1"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>