<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="152dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/dog_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="73dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="230dp"
        android:layout_height="51dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/font1"
        android:text="@string/login"
        android:textColorHighlight="#E5E8B3"
        android:textColorLink="#E5E8B3"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="229dp"
        android:layout_height="52dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/font1"
        android:text="@string/register"
        android:textColorHighlight="#E5E8B3"
        android:textColorLink="#E5E8B3"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="230dp"
        android:layout_height="51dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/font1"
        android:text="@string/reset"
        android:textColorHighlight="#E5E8B3"
        android:textColorLink="#E5E8B3"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/username"
        android:layout_width="225dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="email"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/font1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="144dp"
        android:layout_height="41dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="227dp"
        android:layout_height="56dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/font1"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username" />


</androidx.constraintlayout.widget.ConstraintLayout>