<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="152dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/dog_image_description"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="293dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="57dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="115dp"
        android:layout_height="53dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="227dp"
        android:layout_height="58dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="email"
        android:padding="16dp"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/font1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/password"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:layout_marginBottom="52dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_style"
        android:fontFamily="@font/font1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="53dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/font1"
        android:text="@string/create"
        android:textColorHighlight="#E5E8B3"
        android:textColorLink="#E5E8B3"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/password"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/font1"
        android:text="@string/back"
        android:textColorHighlight="#E5E8B3"
        android:textColorLink="#E5E8B3"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
